# music_compose

./: .gitignore  README.md  create_midi.py  environment.yml  examiner.py  extract_midi.py  main.py  process_midi_file.py  run_model.py
demo_sample/: 275_first_order.mid  275_second_order.mid
demo_sample/post_processing/: (2) First Order Trimmed.mid  (3) First Order to F Major.mid  (4) First Order FMajor + Chord Progression.mid  (5) First Order FMajor + Chord + Band.mid
examine/: examine.py  run.py
midi_files/pokemon/: 1.mid  2.mid  3.mid  4.mid  5.mid
midi_files/random/: 8.mid
midi_files/training/: 1 (1).mid  1 (10).mid  1 (100).mid  1 (101).mid  1 (102).mid  1 (103).mid  (+265 more)
model/: VanillaFirstOrderMarkovChain.py  VanillaSecondOrderMarkovChain.py
preprocessing/: README.md  m21.py  m22.py  m23.py  m24_only_melody_inference.py  m26_midi_to_melody.py  m27_trim_same_size.py  pyproject.toml
sample_outputs/: 10_pred_fmc.mid  10_pred_fmc_2.mid  10_pred_smc.mid  11_pred_fmc.mid  11_pred_smc.mid  13_pred_fmc.mid  13_pred_smc.mid  1_output_all.mid  1_output_highest.mid  1_pred_fmc.mid  1_pred_smc.mid  21_pred_fmc.mid  21_pred_smc.mid  25_pred_fmc.mid  25_pred_fmc_2.mid  25_pred_smc.mid  275_pred_fmc.mid  275_pred_smc.mid  2_output_all.mid  2_output_highest.mid  2_pred_fmc.mid  2_pred_smc.mid  33_pred_fmc.mid  33_pred_smc.mid  3_pred_fmc.mid  3_pred_smc.mid  4_pred_fmc.mid  4_pred_smc.mid  5_pred_fmc.mid  5_pred_smc.mid  6_pred_fmc.mid  6_pred_smc.mid  7_pred_fmc.mid  7_pred_smc.mid  8_pred_fmc.mid  8_pred_smc.mid  9_pred_fmc.mid  9_pred_fmc_2.mid  9_pred_smc.mid
